# mlx

./: CMakeLists.txt
mlx/: CMakeLists.txt  dtype_utils.cpp
mlx/backend/: dtype_utils.h
mlx/backend/metal/: CMakeLists.txt
mlx/backend/no_metal/: allocator.cpp
mlx/backend/rocm/: CMakeLists.txt  allocator.cpp  allocator.h  binary.cpp  copy.cpp  device.cpp  device.h  dtype_utils.h  event.hip.cpp  fence.cpp  matmul.cpp  metal.cpp  primitives.cpp  reduce.cpp  slicing.cpp  unary.cpp  utils.cpp  utils.h
mlx/backend/rocm/kernels/: arange.h  arg_reduce.h  binary_ops.h  fp16_math.h  hipcomplex_math.h  random.h  reduce_ops.h  unary_ops.h  utils.h
mlx/backend/rocm/kernels/iterators/: general_terator.h  repeat_iterator.h  strided_iterator.h
tests/: CMakeLists.txt  metal_tests.cpp
